tests/sksl/errors/Ossfuzz32156.glsl
### Compilation failed:

error: 1: expected ']', but found '*'
1 error
